--- a/package.json
+++ b/package.json
@@ -38,11 +38,7 @@
     "test-karma": "karma start",
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "test-node-watch": "jest $(find api -name '*-test.js') --watch",
-    "docker-build": ". ./docker/build.sh",
-    "docker-dev": ". ./docker/run.dev.sh",
-    "docker-prod": ". ./docker/run.prod.sh",
-    "lighthouse-report": "LIGHTHOUSE_CHROMIUM_PATH=$(which google-chrome) lighthouse http://localhost:8080"
+    "test-node-watch": "jest $(find api -name '*-test.js') --watch"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -144,11 +140,16 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "connect-sqlite3": "^0.9.9",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "email-templates": "^2.5.4",
     "express": "^4.14.1",
     "express-session": "^1.15.0",
+    "express-validator": "^3.1.2",
     "feathers": "^2.0.3",
     "feathers-authentication": "^1.0.2",
     "feathers-authentication-client": "^0.1.7",
@@ -175,7 +176,10 @@
     "morgan": "^1.7.0",
     "multireducer": "^3.1.0",
     "nedb": "^1.8.0",
+    "nodemailer": "^3.1.8",
     "passport-facebook-token": "^3.3.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "pretty-error": "^2.0.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
@@ -193,10 +197,13 @@
     "redux-connect": "^5.0.0",
     "redux-form": "^6.5.0",
     "redux-persist": "^4.1.1",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.5.1",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
+    "sqlite3": "^3.1.8",
     "superagent": "^3.4.1"
   },
   "devDependencies": {
